fixed scroll bar on firefox

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,7 @@ $secondary-text-color: #32ae85;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scrollbar-width: none;
 }
 body{
     min-height: 100vh;
